--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -247,11 +247,11 @@ class="post-67 page type-page status-publish ast-article-single" id="post-67" it
 
 
 
-<p>At W-W-Office, accessible from <a href="index.html">https://wwww-microsoft365.github.io/product/index.html</a>, we are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner. This Privacy Policy outlines how we collect, use, and protect your personal information when you visit our website.</p>
+<p>At W-W-Office, accessible from <a href="index.html">https://wwwmicrosoft365setup.github.io/avtivate/</a>, we are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner. This Privacy Policy outlines how we collect, use, and protect your personal information when you visit our website.</p>
 
 
 
-<p>If you have any questions or concerns about this Privacy Policy, please contact us at <a>support@officehives365.great-site.net/</a>.</p>
+<p>If you have any questions or concerns about this Privacy Policy, please contact us at <a>support@wwwmicrosoft365setup.github.io</a>.</p>
 
 
 
@@ -332,7 +332,7 @@ class="post-67 page type-page status-publish ast-article-single" id="post-67" it
 
 
 <ul>
-<li>You have the right to access, correct, or delete your personal information that we hold. You may also have the right to restrict processing, object to processing, or request data portability. If you wish to exercise any of these rights, please contact us at <a>support@officehives365.great-site.net/</a>.</li>
+<li>You have the right to access, correct, or delete your personal information that we hold. You may also have the right to restrict processing, object to processing, or request data portability. If you wish to exercise any of these rights, please contact us at <a>support@wwwmicrosoft365setup.github.io</a>.</li>
 </ul>
 
 
@@ -361,7 +361,7 @@ class="post-67 page type-page status-publish ast-article-single" id="post-67" it
 
 
 
-<p>If you have any questions or concerns about this Privacy Policy, please contact us at <a>support@officehives365.great-site.net/</a>.</p>
+<p>If you have any questions or concerns about this Privacy Policy, please contact us at <a>support@wwwmicrosoft365setup.github.io</a>.</p>
 
 	
 	
@@ -419,3 +419,4 @@ var astra = {"break_point":"921","isRtl":"","is_scroll_to_id":"1","is_scroll_to_
 
 
 </html>
+
