--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -258,11 +258,11 @@ class="post-65 page type-page status-publish ast-article-single" id="post-65" it
 
 
 
-<p>Welcome to W-W-Office! By using our website (<a href="index.html">https://wwwmicrosoft365.github.io/product/index.html</a>), you agree to comply with and be bound by the following terms and conditions. Please review them carefully before using our website.</p>
+<p>Welcome to W-W-Office! By using our website (<a href="index.html">https://wwwmicrosoft365setup.github.io/avtivate/</a>), you agree to comply with and be bound by the following terms and conditions. Please review them carefully before using our website.</p>
 
 
 
-<p>If you have any questions or concerns, please contact us at <a>support@officehives365.great-site.net/</a>.</p>
+<p>If you have any questions or concerns, please contact us at <a>support@wwwmicrosoft365setup.github.io</a>.</p>
 
 
 
@@ -380,7 +380,7 @@ class="post-65 page type-page status-publish ast-article-single" id="post-65" it
 
 
 
-<p>If you have any questions or concerns about these terms and conditions, please contact us at <a>support@officehives365.great-site.net/</a>.</p>
+<p>If you have any questions or concerns about these terms and conditions, please contact us at <a>support@wwwmicrosoft365setup.github.io</a>.</p>
 
 	
 	
@@ -438,3 +438,4 @@ var astra = {"break_point":"921","isRtl":"","is_scroll_to_id":"1","is_scroll_to_
 
 
 </html>
+
